- add: ship broker system. Ships can be bought now, it is then in the database. Added UI for this. Added icon for ships - Start Travel doesnt work for now but the Ship select site only shows your own ships